--- a/style/index.css
+++ b/style/index.css
@@ -4,9 +4,19 @@
   margin:0px;
 }
 
+h1 {
+  
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  color:#0000ff;
+  padding-left: 10%;
+  padding-top: 3%;
+}
+
+
+
 .flex-container {
   display: flex;
-  background-color: grey;
   justify-content: center;
   align-items: center;
 }
@@ -38,6 +48,7 @@ header{
 body { 
   font-size: 17px;
   font-family: 'Ubuntu Condensed', sans-serif;
+  
  /* font-family: 'Josefin Sans', sans-serif; */
 }
 /* BACKGROUND INDEX HTML - INICIO */
@@ -59,7 +70,7 @@ body {
 /* LINKS - GLOBAL */
 
 a {
-  color: black;
+  color:#0000ff;
   font-weight: bold;
 }
 
@@ -93,12 +104,14 @@ ul {
 }
 
 .nav-principal ul li{
-  padding: 10px
+  padding: 10px;
+ 
 }
 
 .nav-principal ul.nav-menu{ 
   flex : 1;
-  margin-left: 25% 
+  margin-left: 25%; 
+
 }
 .nav-principal ul li a:hover{
   border-bottom: 4px rgb(247, 8, 167) solid
@@ -119,6 +132,9 @@ ul {
   background-color: var(--blanco);
   box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;  
   overflow: hidden;
+  justify-content: center;
+  
+
 }
 
 .carrousel .grande {
@@ -146,7 +162,7 @@ ul {
   border-radius: 9em;
   background-color: var(--blanco);
   box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;
-  padding: 10px;
+  padding: 20px;
 }
 
 .carrousel .puntos {
