--- a/style/index.css
+++ b/style/index.css
@@ -19,22 +19,21 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  width:100%;
 }
 .flex-item1 {
-  background-color: white;
-  width:40%;
-  margin: 10px;
+  width:50%;
+  margin: 50px;
   text-align: center;
   line-height: 30px;
-  font-size: 16px;
+  font-size: 22px;
 }
 .flex-item2 {
-  background-color: blue;
-  width: 200px;;
-  margin: 10px;
+  width: 50%; 
+  margin: 50px;
   text-align: center;
   line-height: 100px;
-  font-size: 50px;
+  font-size: 0px;
 }
 
 .banner img{
@@ -166,14 +165,10 @@ ul {
 
 .carrousel .puntos {
   width: 100%;
-  margin: 1em ;
-  padding-left:70px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-
-  
 }
 
 .carrousel .punto {
@@ -189,4 +184,60 @@ ul {
 
 .carrousel .punto.activo {
   background-color: rgb(247, 8, 167);
+}
+
+
+.form-register {
+  width: 800px;
+  padding: 30px;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 4px;
+  color:#0000ff;
+  box-shadow: 7px 13px 37px #000;
+}
+
+.form-register h4 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.controls {
+  width: 100%;
+  background: #24303c;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  border: 1px solid #1f53c5;
+  font-family: 'calibri';
+  font-size: 18px;
+  color: white;
+}
+
+.form-register p {
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 40px;
+  color: white;
+}
+
+.form-register a {
+  color: white;
+  text-decoration: none;
+}
+
+.form-register a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.form-register .botons {
+  width: 100%;
+  background: #1f53c5;
+  border: none;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
 }
