flex materia prima

--- a/style/index.css
+++ b/style/index.css
@@ -49,8 +49,30 @@ body {
   font-family: 'Ubuntu Condensed', sans-serif;
   
  /* font-family: 'Josefin Sans', sans-serif; */
-}
-/* BACKGROUND INDEX HTML - INICIO */
+ }
+ /* FLEX MATERIAS PRIMAS */
+ .flex-principal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+ }
+ .flex-ppal1 {
+  width:50%;
+  margin: 50px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 22px;
+  border-color:rgb(154, 67, 236);
+  border-style: outset;
+  border-width: 10px;
+  padding: 1%;
+ }
+
+ .mat {
+   background-color: rgb(195, 141, 223);
+ }
+ /* BACKGROUND INDEX HTML - INICIO */
 .inicio{
   background-color: #86e2ff;
   background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23961fe4' fill-opacity='0.21'%3E%3Cpath d='M50 50c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10zM10 10c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10S0 25.523 0 20s4.477-10 10-10zm10 8c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm40 40c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
