--- a/style/index.css
+++ b/style/index.css
@@ -5,13 +5,14 @@
 }
 
 h1 {
-  
+ 
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   color:#0000ff;
   padding-left: 10%;
   padding-top: 3%;
 }
+
 
 
 
@@ -137,7 +138,8 @@ ul {
 }
 .nav-principal ul li a:hover{
   border-bottom: 4px rgb(247, 8, 167) solid;
-  opacity: .7
+  opacity: .7;
+ 
 }
 .nav-principal ul li a{
   padding: 2px
@@ -282,3 +284,85 @@ textarea{
   margin: 16px 0;
   font-size: 16px;
 }
+
+
+
+/*footer*/
+
+/*footer*/
+
+footer{
+  width: 100%;
+  padding: 50px 0px;
+
+  
+
+}
+
+.container__footer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 100%;
+  margin: auto;
+  margin-top: 100px;
+}
+
+.box__footer{
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+
+.container__footer .logo img{
+  width: 100px;
+  border-radius: 80px;
+}
+
+.box__footer .terms{
+  max-width: 350px;
+  margin-top: 20px;
+  font-weight: 500;
+  color: #0000ff;
+  font-size: 24px;
+}
+
+.box__footer h2{
+  margin-bottom: 30px;
+  color: #0909ad;
+  font-weight: 700;
+}
+
+.box__footer a{
+  margin-top: 10px;
+  color: #0000ff;
+  font-weight: 600;
+}
+
+.box__footer a:hover{
+  opacity: 0.8;
+}
+
+.box__footer a .fab{
+  font-size: 20px;
+}
+
+.box__copyright{
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+  padding: 0px 40px;
+}
+
+.box__copyright p{
+  margin-top: 20px;
+  color: #0000ff;
+}
+
+.box__copyright hr{
+  border: none;
+  height: 1px;
+  background-color: #0000ff;
+}
+
+
