--- a/style/index.css
+++ b/style/index.css
@@ -58,7 +58,7 @@ body {
   align-items: center;
   width:100%;
  }
- .flex-ppal1 {
+ .flex-ppal-mat {
   width: 40%;
   margin: 50px;
   text-align: center;
@@ -69,7 +69,7 @@ body {
   border-width: 10px;
   padding: 1%;
  }
- .flex-ppal2 {
+ .flex-ppal-video-mat {
   width: 50%;
   margin: 50px;
   text-align: center;
@@ -83,12 +83,45 @@ body {
 .flex-video1 .flex-video2{
 margin: 5px
 }
-.flex-ppal2 h2{
+.flex-ppal-video-mat h2{
   padding-bottom: 30px;
 }
  .mat {
    background-color: rgb(195, 141, 223);
  }
+/* FLEX MAQUINAS Y HERRAMIENTAS */
+
+.flex-ppal-maquina{
+
+  margin-top: 30px;
+  margin-left: 30px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 22px;
+  border-color:rgb(154, 67, 236);
+  border-style: outset;
+  border-width: 10px;
+  padding: 1%;
+ }
+.flex-ppal-video-maquina {
+  width: 50%;
+  margin: 30px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 22px;
+  border-color:rgb(154, 67, 236);
+  border-style: outset;
+  border-width: 10px;
+  padding: 1%;
+ }
+
+.flex-ppal-video-maquina h2{
+  padding-bottom: 30px;
+}
+
+.flex-video1-maq .flex-video2-maq{
+  margin: 5px
+  }
  /* BACKGROUND INDEX HTML - INICIO */
 .inicio{
   background-color: #86e2ff;
